[build-system]
requires = ["cython", "oldest-supported-numpy", "setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
include = '\.pyi?$'
line-length = 120
target-version = ['py37']

[tool.cibuildwheel]
test-command = "python -c 'import bx, bx.align, bx.align.sitemask, bx.align.tools, bx.arrays, bx.bbi, bx.cookbook, bx.intervals, bx.intervals.operations, bx.intseq, bx.misc, bx.motif, bx.motif.io, bx.motif.logo, bx.phylo, bx.pwm, bx.seq, bx.tabular, bx_extras'"

[tool.cibuildwheel.linux]
before-all = """
if command -v yum; then
    yum -y install zlib-devel
elif command -v apk; then
    apk add zlib-dev
else
    apt-get -y install libz-dev
fi
"""

[tool.cibuildwheel.macos]
# If there is no wheel for numpy on macOS (e.g. for the oldest supported numpy
# for PyPy3.7), we need to build it using OpenBLAS (both before building the
# bx-python wheel and when testing it), see
# https://github.com/numpy/numpy/issues/15947#issuecomment-683355728
before-all = """
brew install openblas && cat > ~/.numpy-site.cfg <<EOF
[openblas]
libraries = openblas
library_dirs = $(brew --prefix openblas)/lib
include_dirs = $(brew --prefix openblas)/include
runtime_library_dirs = $(brew --prefix openblas)/lib
EOF
"""

[tool.darker]
isort = true
