[metadata]
author = James Taylor, Bob Harris, David King, Brent Pedersen, Kanwei Li, Nicola Soranzo, and others
author_email = james@jamestaylor.org
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Software Development :: Libraries :: Python Modules
name = bx-python
description = Tools for manipulating biological data, particularly multiple sequence alignments
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/bxlab/bx-python/issues
    Source Code = https://github.com/bxlab/bx-python
url = https://github.com/bxlab/bx-python
version = attr: bx.__version__

[options]
zip_safe = False
install_requires =
    numpy
py_modules =
    psyco_full
python_requires = >=3.6
tests_require =
    nose
    python-lzo

[aliases]
snapshot = egg_info -rb_DEV bdist_egg rotate -m.egg -k1
build_docs = build_sphinx build_apidocs

[flake8]
ignore = E226,E501,E741,W503
exclude = .git,.tox,.venv,build,doc/source/conf.py
import-order-style = smarkets
application-import-names = bx,bx_extras

[nosetests]
tests=lib/, script_tests/
#verbosity=2
#detailed-errors=1
with-doctest=1
doctest-extension=pyx

[build_sphinx]
source-dir = doc/source
build-dir  = doc/docbuild
all_files  = 1
